<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="375dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="Zone here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/zoneText"
                    android:textColor="#fff"
                    android:typeface="sans"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/songTime"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fff"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/songName"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/songTotalTime"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fff"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="62dp">

                <Button
                    android:text="@string/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forwardButton"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pauseButton"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/playButton"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/rewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rewindButton" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>